--- a/tryial/src/app/app.component.html
+++ b/tryial/src/app/app.component.html
@@ -82,7 +82,7 @@
     </div>
   </section>
 </div>
-
+<lib-sw-basic-dropdown-list></lib-sw-basic-dropdown-list>
 <script>
 function copyToClipboard(text) {
   navigator.clipboard.writeText(text).then(() => {
