--- a/tryial/src/app/app.component.html
+++ b/tryial/src/app/app.component.html
@@ -10,10 +10,8 @@
             <div class="card">
               <h3 class="card-title">{{ filteredComponents[category][currentComponentIndex[category]]?.name }}</h3>
               <p><strong>Category:</strong> {{ filteredComponents[category][currentComponentIndex[category]]?.category }}</p>
-              <p><strong>name:</strong> {{ filteredComponents[category][currentComponentIndex[category]]?.name }}</p>
               <pre><strong>Preview:</strong></pre>
-              <div class="usage" [innerHTML]="sanitizeUsage(filteredComponents[category][currentComponentIndex[category]]?.usage)"></div>
-              <p><strong>Usage:</strong> <code>{{ filteredComponents[category][currentComponentIndex[category]]?.usage }}</code></p>
+              <iframe [src]="iframeSrc[category]" width="100%" height="300px" frameborder="0"></iframe>
             </div>
           </ng-container>
         </div>
