--- a/tryial/src/app/app.component.html
+++ b/tryial/src/app/app.component.html
@@ -11,7 +11,7 @@
               <h3 class="card-title">{{ filteredComponents[category][currentComponentIndex[category]]?.name }}</h3>
               <p><strong>Category:</strong> {{ filteredComponents[category][currentComponentIndex[category]]?.category }}</p>
               <pre><strong>Preview:</strong></pre>
-              <iframe src="http://localhost:3000/api/preview/66c49613356c3bb9c77a3b18" width="100%" height="300px" frameborder="0"></iframe>
+              <iframe [src]="iframeSrc[category]" width="100%" height="300px" frameborder="0"></iframe>
             </div>
           </ng-container>
         </div>
