--- a/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-primary-button/sw-primary-button.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-primary-button/sw-primary-button.component.html
@@ -1,1 +1,17 @@
-<button class="btn btn-primary"> Primary Button </button>
+<style>
+    .btn {
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      cursor: pointer;
+    }
+  
+    .btn-primary {
+      background-color: #007bff;
+      color: white;
+    }
+  </style>
+  
+  <button class="btn btn-primary"> Primary Button </button>
+  
