added css to every component

--- a/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-success-button/sw-success-button.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-success-button/sw-success-button.component.html
@@ -1,1 +1,6 @@
+<style>.btn-success {
+    background-color: #28a745;
+    color: white;
+  }
+  </style>
 <button class="btn btn-success">Success Button</button>
