--- a/sw-ui-lib/projects/sw-ui/src/lib/drop-lists/sw-styled-dropdown-list/sw-styled-dropdown-list.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/drop-lists/sw-styled-dropdown-list/sw-styled-dropdown-list.component.html
@@ -6,4 +6,20 @@
       <a href="#">Option 3</a>
     </div>
   </div>
+  <style>.dropbtn {
+    background-color: #3498db;
+    color: white;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+  }
   
+  .dropdown-content a {
+    padding: 12px 16px;
+    color: #3498db;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  </style>
