--- a/sw-ui-lib/projects/sw-ui/src/lib/navbars/sw-centred-navbar/sw-centred-navbar.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/navbars/sw-centred-navbar/sw-centred-navbar.component.html
@@ -6,4 +6,21 @@
       <li><a href="#" class="nav-link">Contact</a></li>
     </ul>
   </nav>
+  <style>.navbar {
+    display: flex;
+    justify-content: center;
+    background-color: #444;
+    padding: 10px;
+  }
   
+  .navbar-nav {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+  }
+  
+  .nav-link {
+    color: white;
+    text-decoration: none;
+  }
+  </style>
