--- a/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-secondary-button/sw-secondary-button.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-secondary-button/sw-secondary-button.component.html
@@ -1,1 +1,6 @@
+<style>.btn-secondary {
+    background-color: #6c757d;
+    color: white;
+  }
+  </style>
 <button class="btn btn-secondary">Secondary Button</button>
