--- a/sw-ui-lib/projects/sw-ui/src/lib/forms/sw-select-dropdown-component/sw-select-dropdown-component.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/forms/sw-select-dropdown-component/sw-select-dropdown-component.component.html
@@ -1,4 +1,17 @@
 <select class="select-dropdown">
     <ng-content></ng-content>
   </select>
+  <style>.select-dropdown {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+  }
   
+  .select-dropdown:focus {
+    border-color: #007bff;
+    outline: none;
+  }
+  </style>
