--- a/tryial/src/app/app.component.html
+++ b/tryial/src/app/app.component.html
@@ -3,23 +3,29 @@
 
   <div class="category-container">
     <ng-container *ngFor="let category of categories">
-      <div class="category-card">
-        <h2 class="category-title">{{ category }}</h2>
-        <div class="card-container">
-          <ng-container *ngIf="filteredComponents[category]?.length">
+      <ng-container *ngIf="filteredComponents[category]?.length">
+        <div class="category-card">
+          <h2 class="category-title">{{ category }}</h2>
+
+          <div class="card-container">
             <div class="card">
               <h3 class="card-title">{{ filteredComponents[category][currentComponentIndex[category]]?.name }}</h3>
-              <p><strong>Category:</strong> {{ filteredComponents[category][currentComponentIndex[category]]?.category }}</p>
+              <p><strong>Usage:</strong> {{ filteredComponents[category][currentComponentIndex[category]]?.usage }}</p>
+              <button (click)="copyToClipboard(filteredComponents[category][currentComponentIndex[category]]?.usage)" class="copy-button">
+                <i class="fas fa-copy"></i>
+              </button>
               <pre><strong>Preview:</strong></pre>
-              <iframe [src]="iframeSrc[category]" width="100%" height="300px" frameborder="0"></iframe>
+
+              <iframe *ngIf="iframeSrc[category]" [src]="iframeSrc[category]" width="100%" height="300px" frameborder="0"></iframe>
             </div>
-          </ng-container>
+          </div>
+
+          <div class="pagination-controls">
+            <button (click)="prevPage(category)">&#8592; Previous</button>
+            <button (click)="nextPage(category)">Next &#8594;</button>
+          </div>
         </div>
-        <div class="pagination-controls">
-          <button (click)="prevPage(category)">&#8592; Previous</button>
-          <button (click)="nextPage(category)">Next &#8594;</button>
-        </div>
-      </div>
+      </ng-container>
     </ng-container>
   </div>
 </div>
