--- a/tryial/src/app/login/login.component.html
+++ b/tryial/src/app/login/login.component.html
@@ -1,16 +1,31 @@
-<!-- login.component.html -->
-<div>
-    <h2>Login</h2>
-    <form (ngSubmit)="login()">
-      <label>Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required>
-      
-      <label>Password:</label>
-      <input type="password" [(ngModel)]="password" name="password" required>
-      
-      <button type="submit">Login</button>
-    </form>
-    <p *ngIf="success">{{ success }}</p>
-    <p *ngIf="error">{{ error }}</p>
+<body>
+  <!-- partial:index.partial.html -->
+  <div class="wrapper">
+    <div class="login_box">
+      <div class="login-header">
+        <span>Login</span>
+      </div>
+      <form (ngSubmit)="login()">
+        <div class="input_box">
+          <input type="email" id="email" class="input-field" [(ngModel)]="email" name="email" required />
+          <label for="email" class="label">Email</label>
+          <i class="bx bx-envelope icon"></i>
+        </div>
+        <div class="input_box">
+          <input type="password" id="password" class="input-field" [(ngModel)]="password" name="password" required />
+          <label for="password" class="label">Password</label>
+          <i class="bx bx-lock-alt icon"></i>
+        </div>
+        <div class="input_box">
+          <input type="submit" class="input-submit" value="Login" />
+        </div>
+        <p *ngIf="success" class="success-message">{{ success }}</p>
+        <p *ngIf="error" class="error-message">{{ error }}</p>
+        <div class="register">
+          <span>Don't have an account? <a [routerLink]="['register']">Register</a></span>
+        </div>
+      </form>
+    </div>
   </div>
-  
+  <!-- partial -->
+</body>
