added welcome message

--- a/tryial/src/app/header/header.component.html
+++ b/tryial/src/app/header/header.component.html
@@ -2,7 +2,8 @@
     <div class="logo">
         <img src="../../assets/images.jpeg" alt="Logo" />
     </div>
+    <div class="welcome-message">
+        Welcome, {{ userName }}
+    </div>
     <button class="logout-button" (click)="onLogout()">Logout</button>
 </header>
-
-  
