--- a/tryial/src/app/components/components.component.html
+++ b/tryial/src/app/components/components.component.html
@@ -22,10 +22,18 @@
             <div class="card">
               <h3 class="card-title">{{ filteredComponents[category][currentComponentIndex[category]]?.name }}</h3>
               <p><strong>Usage:</strong> {{ filteredComponents[category][currentComponentIndex[category]]?.usage }}</p>
-              <button (click)="copyToClipboard(filteredComponents[category][currentComponentIndex[category]]?.usage)" class="copy-button">
-                <i class="fas fa-copy"></i>
+
+
+              <pre class="code-block">
+                <code>
+                  <strong>Code:</strong>
+                  {{ filteredComponents[category][currentComponentIndex[category]]?.code }}
+                </code>
+              </pre>
+
+              <button (click)="copyToClipboard(filteredComponents[category][currentComponentIndex[category]]?.code)" class="copy-button">
+                COPY
               </button>
-              <pre><strong>Preview:</strong></pre>
 
               <iframe *ngIf="iframeSrc[category]" [src]="iframeSrc[category]" width="100%" height="300px" frameborder="0"></iframe>
             </div>
