--- a/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-close-button/sw-close-button.component.html
+++ b/sw-ui-lib/projects/sw-ui/src/lib/buttons/sw-close-button/sw-close-button.component.html
@@ -1,3 +1,4 @@
-<button class="close-button" >
+<button class="close-button" > 
+    Close
     &times; <!-- This represents the close icon (×) -->
 </button>
