--- a/tryial/src/app/app.component.html
+++ b/tryial/src/app/app.component.html
@@ -1,3 +1,5 @@
-<!-- app.component.html -->
+<body>
 <app-header *ngIf="authService.isAuthenticated()"></app-header>
 <router-outlet></router-outlet>
+</body>
+
