--- a/tryial/src/app/login/login.component.html
+++ b/tryial/src/app/login/login.component.html
@@ -1,28 +1,31 @@
+
 <body>
   <!-- partial:index.partial.html -->
   <div class="wrapper">
     <div class="login_box">
       <div class="login-header">
-        <span>Login</span>
+        <h2>Login</h2>
       </div>
       <form (ngSubmit)="login()">
-        <div class="input_box">
-          <input type="email" id="email" class="input-field" [(ngModel)]="email" name="email" required />
+        <div class="input-box">
           <label for="email" class="label">Email</label>
+
+          <input type="email" id="email" class="input-field" [(ngModel)]="email" name="email" required />
           <i class="bx bx-envelope icon"></i>
         </div>
-        <div class="input_box">
-          <input type="password" id="password" class="input-field" [(ngModel)]="password" name="password" required />
+        <div class="input-box">
           <label for="password" class="label">Password</label>
+
+          <input type="password" id="password" class="input-field" [(ngModel)]="password" name="password" required />
           <i class="bx bx-lock-alt icon"></i>
         </div>
-        <div class="input_box">
+        <div class="input-box button">
           <input type="submit" class="input-submit" value="Login" />
         </div>
         <p *ngIf="success" class="success-message">{{ success }}</p>
         <p *ngIf="error" class="error-message">{{ error }}</p>
-        <div class="register">
-          <span>Don't have an account? <a [routerLink]="['register']">Register</a></span>
+        <div class="text">
+          <h3>Don't have an account? <a [routerLink]="['/register']">Register</a></h3>
         </div>
       </form>
     </div>
