--- a/tryial/src/app/register/register.component.html
+++ b/tryial/src/app/register/register.component.html
@@ -3,41 +3,45 @@
   <div class="wrapper">
     <div class="login_box">
       <div class="login-header">
-        <span>Register</span>
+        <h2>Register</h2>
       </div>
       <form (ngSubmit)="register()">
-        <div class="input_box">
-          <input type="text" id="name" class="input-field" [(ngModel)]="name" name="name" required />
+        <div class="input-box">
           <label for="name" class="label">Name</label>
+
+          <input type="text" id="name" class="input-field" [(ngModel)]="name" name="name" required />
           <i class="bx bx-user icon"></i>
         </div>
-        <div class="input_box">
-          <input type="text" id="lastname" class="input-field" [(ngModel)]="lastname" name="lastname" required />
+        <div class="input-box">
           <label for="lastname" class="label">Lastname</label>
+
+          <input type="text" id="lastname" class="input-field" [(ngModel)]="lastname" name="lastname" required />
           <i class="bx bx-user icon"></i>
         </div>
-        <div class="input_box">
-          <input type="text" id="role" class="input-field" [(ngModel)]="role" name="role" required />
+        <div class="input-box">
           <label for="role" class="label">Role</label>
+
+          <input type="text" id="role" class="input-field" [(ngModel)]="role" name="role" required />
           <i class="bx bx-user icon"></i>
         </div>
-        <div class="input_box">
-          <input type="email" id="email" class="input-field" [(ngModel)]="email" name="email" required />
+        <div class="input-box">
           <label for="email" class="label">Email</label>
+
+          <input type="email" id="email" class="input-field" [(ngModel)]="email" name="email" required />
           <i class="bx bx-envelope icon"></i>
         </div>
-        <div class="input_box">
-          <input type="password" id="password" class="input-field" [(ngModel)]="password" name="password" required />
+        <div class="input-box">
           <label for="password" class="label">Password</label>
+          <input type="password" id="password" class="input-field" [(ngModel)]="password" name="password" required />
           <i class="bx bx-lock-alt icon"></i>
         </div>
-        <div class="input_box">
+        <div class="input-box button">
           <input type="submit" class="input-submit" value="Register" />
         </div>
         <p *ngIf="success" class="success-message">{{ success }}</p>
         <p *ngIf="error" class="error-message">{{ error }}</p>
-        <div class="register">
-          <span>Already have an account?  <a [routerLink]="['/login']">Login</a></span>
+        <div class="text">
+          <h3>Already have an account? <a [routerLink]="['/login']">Login</a></h3>
         </div>
       </form>
     </div>
