--- a/tryial/src/app/login/login.component.html
+++ b/tryial/src/app/login/login.component.html
@@ -1,21 +1,24 @@
-
 <body>
   <!-- partial:index.partial.html -->
   <div class="wrapper">
     <div class="login_box">
+      <!-- Logo added here -->
+      <div class="logo">
+        <img src="../../assets/images.jpeg" alt="Logo" class="logo-image" />
+        <H3 class="title">SW UI LIBRARY</H3>
+
+      </div>
       <div class="login-header">
         <h2>Login</h2>
       </div>
       <form (ngSubmit)="login()">
         <div class="input-box">
           <label for="email" class="label">Email</label>
-
           <input type="email" id="email" class="input-field" [(ngModel)]="email" name="email" required />
           <i class="bx bx-envelope icon"></i>
         </div>
         <div class="input-box">
           <label for="password" class="label">Password</label>
-
           <input type="password" id="password" class="input-field" [(ngModel)]="password" name="password" required />
           <i class="bx bx-lock-alt icon"></i>
         </div>
