--- a/tryial/src/app/register/register.component.html
+++ b/tryial/src/app/register/register.component.html
@@ -2,6 +2,10 @@
   <!-- partial:index.partial.html -->
   <div class="wrapper">
     <div class="login_box">
+      <div class="logo">
+        <img src="../../assets/images.jpeg" alt="Logo" class="logo-image" />
+        <H3 class="title">SW UI LIBRARY</H3>
+      </div>
       <div class="login-header">
         <h2>Register</h2>
       </div>
